2020-08-11 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/tlcs90/Makefile.in,
	  device/lib/tlcs90/atomic_flag_test_and_set.s,
	  device/include/stdatomic.h,
	  device/lib/atomic_flag_clear.c,
	  support/regression/tests/atomic.c:
	  Basic implementation of RFE #649 for tlcs90.

2020-08-11 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/r2k/Makefile.in,
	  device/lib/r2k/memcpy.s,
	  device/lib/r3ka/Makefile.in,
	  device/lib/r3ka/memcpy.s,
	  device/lib/tlcs90/Makefile.in,
	  device/lib/tlcs90/memcpy.s,
	  device/lib/tlcs90/memmove.s:
	  Implement RFE #664 for tlcs90, r2k and r3ka.

2020-08-11 Sergey Belyashov <sergey.belyashov@gmail.com>

	* support/regression/tests/bug-2645.c:
	  Disable warning 154 in regression testsuit.

2020-08-11 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  Make some of Z80 common peephole rules more generic.

2020-08-10 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peep.c:
	  Fix always false conditions in code.

2020-08-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/gen.c (aopForRemat): fix regression test bug-2363
	  failure on ds390

2020-08-07 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  Make some of Z80 common peephole rules more generic.

2020-08-07 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peep.c:
	  More accurate Z80 flag handling by notUsed.

2020-08-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Avoid unecessary stack save of hl, RFE #699.

2020-08-06 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph-gbz80.def,
	  src/z80/peeph.def:
	  Use flag rules for all z80 ports.

2020-08-06 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peep.c:
	  canAssign now return true for (IX)/(IY)/(HL) with any register
	  pair for eZ80_Z80 port.

2020-08-06 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peep.c:
	  Fix pop af handling for notUsed('f').
